# python-project-52

./: .env.example  .gitignore  Makefile  README.md  build.sh  main.py  pyproject.toml  settings.py  urls.py  views.py
task_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0002_tasklabel_task_labels.py  0003_alter_task_executor.py  0004_alter_task_author_alter_task_executor_and_more.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  index.html  login.html
templates/locale/ru/LC_MESSAGES/: django.mo  django.po
templates/task_manager/labels/: delete.html  form.html  list.html
templates/task_manager/statuses/: delete.html  form.html  list.html
templates/task_manager/tasks/: delete.html  detail.html  form.html  list.html
templates/task_manager/users/: create.html  delete.html  form.html  list.html
